--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^0.27.0",
+    "axios": "^0.27.1",
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "xlsx": "^0.18.5"
   },
