--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.1.0",
     "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^6.3.0",
+    "sweetalert2": "^11.4.10",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
