--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@handsontable/react": "^12.0.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "handsontable": "^12.0.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
